--- a/index.html
+++ b/index.html
@@ -21,75 +21,69 @@
       padding: 40px;
       border-radius: 12px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      max-width: 420px;
+      max-width: 440px;
       width: 90%;
     }
-    h1 {
-      font-size: 24px;
-      margin-bottom: 10px;
-    }
-    p {
-      font-size: 16px;
-      color: #666;
-      margin-bottom: 16px;
-      line-height: 1.5;
-    }
-    a {
-      color: #007bff;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
+    h1 { font-size: 24px; margin-bottom: 10px; }
+    p  { font-size: 16px; color: #666; margin-bottom: 14px; line-height: 1.5; }
+    a  { color: #007bff; text-decoration: none; }
+    a:hover { text-decoration: underline; }
 
-    .cta {
+    .store-badge {
       display: inline-block;
-      margin: 8px 0 18px;
-      padding: 12px 16px;
-      border-radius: 10px;
-      background: #111;
-      color: #fff;
-      font-weight: 600;
+      margin: 10px 0 10px;
     }
-    .cta:hover {
-      text-decoration: none;
-      background: #000;
+    .store-badge img {
+      height: 54px;            /* 필요하면 44~64 사이에서만 조절 */
+      width: auto;
+      display: block;
     }
 
-    #content-ko, #content-en {
-      display: none;
+    .subtle {
+      font-size: 14px;
+      color: #777;
+      margin-top: 4px;
+      margin-bottom: 18px;
     }
+
+    #content-ko, #content-en { display: none; }
   </style>
 </head>
 <body>
   <div class="container">
-    <!-- 한국어 콘텐츠 -->
+    <!-- 한국어 -->
     <div id="content-ko">
       <h1>Ratings 공식 지원 사이트</h1>
       <p>Ratings 앱을 이용해 주셔서 감사합니다.</p>
 
-      <a class="cta"
+      <a class="store-badge"
          href="https://play.google.com/store/apps/details?id=com.darkmeter.ratings&hl=ko"
          target="_blank"
-         rel="noopener noreferrer">
-        Google Play에서 설치
+         rel="noopener noreferrer"
+         aria-label="Google Play에서 Ratings 다운로드">
+        <img src="assets/google-play-badge-ko.png" alt="Google Play에서 다운로드" />
       </a>
+
+      <div class="subtle">iOS 버전은 준비 중입니다.</div>
 
       <p>문의사항이나 건의사항이 있으시면 아래 이메일로 연락해 주세요.</p>
       <p>✉️ <a href="mailto:dev.odddeye@gmail.com">dev.odddeye@gmail.com</a></p>
     </div>
 
-    <!-- 영어 콘텐츠 -->
+    <!-- English -->
     <div id="content-en">
       <h1>Ratings Support Site</h1>
       <p>Thanks for using Ratings.</p>
 
-      <a class="cta"
+      <a class="store-badge"
          href="https://play.google.com/store/apps/details?id=com.darkmeter.ratings&hl=en"
          target="_blank"
-         rel="noopener noreferrer">
-        Get it on Google Play
+         rel="noopener noreferrer"
+         aria-label="Download Ratings on Google Play">
+        <img src="assets/google-play-badge-en.png" alt="Get it on Google Play" />
       </a>
+
+      <div class="subtle">iOS version is coming soon.</div>
 
       <p>If you have questions or suggestions, contact us via email.</p>
       <p>✉️ <a href="mailto:dev.odddeye@gmail.com">dev.odddeye@gmail.com</a></p>
