--- a/index.html
+++ b/index.html
@@ -10,40 +10,65 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh;
+      min-height: 100vh;
       margin: 0;
       background-color: #f8f9fa;
       color: #333;
       text-align: center;
+      padding: 24px 0;
     }
     .container {
       background: white;
-      padding: 40px;
+      padding: 34px 26px;
       border-radius: 12px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-      max-width: 440px;
-      width: 90%;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+      max-width: 520px;
+      width: 92%;
     }
-    h1 { font-size: 24px; margin-bottom: 10px; }
-    p  { font-size: 16px; color: #666; margin-bottom: 14px; line-height: 1.5; }
-    a  { color: #007bff; text-decoration: none; }
-    a:hover { text-decoration: underline; }
-
+    h1 { font-size: 26px; margin: 0 0 8px; }
+    .tagline {
+      font-size: 16px;
+      color: #555;
+      margin: 0 0 16px;
+      line-height: 1.5;
+    }
     .store-badge {
       display: inline-block;
-      margin: 10px 0 10px;
+      margin: 8px 0 8px;
     }
     .store-badge img {
-      height: 54px;            /* 필요하면 44~64 사이에서만 조절 */
+      height: 56px;
       width: auto;
       display: block;
     }
-
     .subtle {
       font-size: 14px;
       color: #777;
-      margin-top: 4px;
-      margin-bottom: 18px;
+      margin: 6px 0 18px;
+    }
+    .section-title {
+      font-size: 16px;
+      font-weight: 700;
+      margin: 18px 0 8px;
+      color: #333;
+      text-align: left;
+    }
+    ul {
+      margin: 0 0 10px;
+      padding-left: 18px;
+      text-align: left;
+      color: #666;
+      line-height: 1.55;
+      font-size: 15px;
+    }
+    li { margin: 6px 0; }
+    a { color: #0b66ff; text-decoration: none; }
+    a:hover { text-decoration: underline; }
+
+    .divider {
+      height: 1px;
+      background: #eee;
+      margin: 18px 0;
     }
 
     #content-ko, #content-en { display: none; }
@@ -51,43 +76,78 @@
 </head>
 <body>
   <div class="container">
+
     <!-- 한국어 -->
     <div id="content-ko">
-      <h1>Ratings 공식 지원 사이트</h1>
-      <p>Ratings 앱을 이용해 주셔서 감사합니다.</p>
+      <h1>Ratings</h1>
+      <p class="tagline">
+        가짜 5점 리뷰는 그만. 소셜 없이, 나만 보는 솔직한 평가 기록 앱.
+      </p>
 
       <a class="store-badge"
          href="https://play.google.com/store/apps/details?id=com.darkmeter.ratings&hl=ko"
-         target="_blank"
-         rel="noopener noreferrer"
+         target="_blank" rel="noopener noreferrer"
          aria-label="Google Play에서 Ratings 다운로드">
-        <img src="assets/google-play-badge-en.png" alt="Google Play에서 다운로드" />
+        <!-- 배지는 EN으로 통일 -->
+        <img src="assets/google-play-badge-en.png" alt="Get it on Google Play" />
       </a>
 
       <div class="subtle">iOS 버전은 준비 중입니다.</div>
 
-      <p>문의사항이나 건의사항이 있으시면 아래 이메일로 연락해 주세요.</p>
-      <p>✉️ <a href="mailto:dev.odddeye@gmail.com">dev.odddeye@gmail.com</a></p>
+      <div class="divider"></div>
+
+      <div class="section-title">주요 기능</div>
+      <ul>
+        <li>0.5점 단위(반별)로 빠르고 솔직한 평점 기록</li>
+        <li>사진 & 메모로 “미래의 나”를 위한 기록</li>
+        <li>음식/영화/음악/책/게임/여행/장소/운동/제품 등 카테고리별 관리</li>
+        <li>내 평균 평점, 카테고리별 통계, 분포로 내 취향 보기</li>
+        <li>검색/필터(예: 1점만 보기)로 과거 기록 즉시 찾기</li>
+        <li>Google 로그인, 기록은 나만 볼 수 있고 언제든 삭제 가능</li>
+      </ul>
+
+      <div class="divider"></div>
+
+      <p>
+        문의/건의: <a href="mailto:dev.odddeye@gmail.com">dev.odddeye@gmail.com</a>
+      </p>
     </div>
 
     <!-- English -->
     <div id="content-en">
-      <h1>Ratings Support Site</h1>
-      <p>Thanks for using Ratings.</p>
+      <h1>Ratings</h1>
+      <p class="tagline">
+        Stop giving polite 5-stars. Keep a brutally honest, private rating journal.
+      </p>
 
       <a class="store-badge"
          href="https://play.google.com/store/apps/details?id=com.darkmeter.ratings&hl=en"
-         target="_blank"
-         rel="noopener noreferrer"
+         target="_blank" rel="noopener noreferrer"
          aria-label="Download Ratings on Google Play">
         <img src="assets/google-play-badge-en.png" alt="Get it on Google Play" />
       </a>
 
       <div class="subtle">iOS version is coming soon.</div>
 
-      <p>If you have questions or suggestions, contact us via email.</p>
-      <p>✉️ <a href="mailto:dev.odddeye@gmail.com">dev.odddeye@gmail.com</a></p>
+      <div class="divider"></div>
+
+      <div class="section-title">Key features</div>
+      <ul>
+        <li>Fast 0.5-step ratings (half-star precision)</li>
+        <li>Add photos and honest notes for your future self</li>
+        <li>Track across categories: Food, Movies/TV, Music, Books, Games, Travel, Places, Exercise, Products</li>
+        <li>Your stats: total logs, average score, category stats, rating distribution</li>
+        <li>Search and filters (e.g., show only 1-star places)</li>
+        <li>Google sign-in, private records, delete your data anytime</li>
+      </ul>
+
+      <div class="divider"></div>
+
+      <p>
+        Support: <a href="mailto:dev.odddeye@gmail.com">dev.odddeye@gmail.com</a>
+      </p>
     </div>
+
   </div>
 
   <script>
